Fix note delete button on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -247,6 +247,7 @@ input.form-control:focus {
 .rounded-pill.with-btn-delete .btn-delete-container {
     position: absolute;
     right: 12px;
+    z-index: 1;
 }
 
 .rounded-pill {
